Feature: Added the endpoint to login and generate a new token
