# auth_api/main.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/Andre-Sacilotti/golang-credit-backend/auth_api/auth/delivery"
 	"github.com/Andre-Sacilotti/golang-credit-backend/auth_api/auth/repository"
 	"github.com/Andre-Sacilotti/golang-credit-backend/auth_api/auth/usecase"
 	_ "github.com/Andre-Sacilotti/golang-credit-backend/auth_api/docs"
@@ -17,14 +18,16 @@ import (
 
 // @title Auth API
 // @version 1.0
-// @description REST API to authenticate bearer token
+// @Security ApiKeyAuth
+// @param Authorization header string true "Authorization"
+// @description REST API to login and authenticate a token
 // @contact.name André Sacilotti
 // @contact.email andre.sacilotti@gmail.com
-// @host localhost:8080
+// @host 0.0.0.0:81
 // @BasePath /auth
 func main() {
 
-	time.Sleep(2 * time.Second)
+	time.Sleep(4 * time.Second)
 
 	dsn := "host=postgresql_auth user=test password=test dbname=auth_users port=5433 sslmode=disable TimeZone=America/Sao_Paulo"
 	db, err := gorm.Open(postgres.Open(dsn), &gorm.Config{})
@@ -45,8 +48,8 @@ func main() {
 
 	ar := repository.AuthRepositoryInterface(db)
 	au := usecase.UsecaseInterface(ar)
-
+	delivery.AuthHandlerInterface(router, au)
 	router.PathPrefix("/docs").Handler(httpSwagger.WrapHandler)
-	log.Fatal(http.ListenAndServe(":80", router))
+	log.Fatal(http.ListenAndServe(":81", router))
 
 }
